# tableau-python-automated-dashboard-generator

./: .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
config/: tableau_config.example.yaml
examples/: bulk_operations.py  etl_pipeline.py  publish_workbook.py  refresh_extract.py
src/: __init__.py
src/tableau_automation/: __init__.py  tableau_publisher.py
tests/: __init__.py  test_tableau_publisher.py
